--- a/design.css
+++ b/design.css
@@ -5,30 +5,25 @@
 	list-style: none;
 	font-family: 'Montserrat', sans-serif;
 }
-
 body{
 	background: #585C68;
 	font-size: 14px;
 	line-height: 22px;
 	color: #555555;
 }
-
 .ensemble{
 	width: 800px;
 	height: auto;
 	display: flex;
 	margin: 50px auto;
 }
-
 .ensemble .ensemble_gauche{
 	width:280px;
 	background: #FFAB91;
 }
-
 .ensemble .ensemble_gauche .ensemble_photo{
 	text-align: center;
 }
-
 .ensemble .ensemble_gauche .ensemble_photo img{
 	width:150px;
 	height:150px;
@@ -37,7 +32,6 @@ body{
 	margin-bottom: 40px;
 	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
-
 .ensemble_item{
 	text-align: center;
 	background-color: #455A64; 
@@ -45,36 +39,77 @@ body{
 	font-size: 1.4em;
 	padding:5px;
 }
-
 .contact_item{
 	margin: 20px 30px 20px 30px;
 	font-size: 0.8em;
 }
-
 .contact_item p{
 	line-height: 1.5em;
 	margin:10px 0px 10px 0px;
 }
-
-
 .text_descript{
-	margin:20px 30px 150px 30px;
+	margin:20px 30px 230px 30px;
 	font-size: 0.8em;
 	text-align: justify;
 }
-
 .ensemble_fa{
 	display:flex;
 	justify-content: center;
 }
-
 .fas{
 	font-size: 2em;
 	color:#455A64;
 	margin:20px;
 }
-
 .ensemble_droit{
 	background-color: white;
 	width:560px;
+}
+.ensemble_droit h1{
+	font-size: 2.5em;
+}
+.ensemble_contenu_droit{
+	margin: 70px 20px 20px 40px;
+}
+.ensemble_title{
+	margin-bottom: 130px;
+}
+.divider{
+	width:100%;
+	height:1px;
+	background-color: #FFAB91;
+}
+.row{
+	display: flex;
+	margin-top: 25px;
+}
+.row_date{
+	display: inline-flex;
+	margin-right: 80px;
+	font-size: 0.8em;
+	align-items: baseline;
+}
+.row_descript p{
+	font-size: 0.7em;
+}
+.fa-dot-circle{
+	margin-right: 5px;
+}
+.fa-medal{
+	font-size: 1em;
+	margin:0px 10px 5px 0px;
+}
+.marge{
+	margin-top: 30px;
+}
+.recom{
+	display: flex;
+	margin-top: 20px;
+}
+.recom_text{
+	font-size: 0.6em;
+	line-height: 2em;
+}
+.recom_text:first-child{
+	margin-right: 150px;
 }
