--- a/design.css
+++ b/design.css
@@ -7,9 +7,11 @@
 }
 body{
 	background: #585C68;
-	font-size: 14px;
-	line-height: 22px;
+	line-height: 20px;
 	color: #555555;
+}
+h4{
+	font-size: 0.9em;
 }
 .ensemble{
 	width: 800px;
@@ -36,12 +38,12 @@ body{
 	text-align: center;
 	background-color: #455A64; 
 	color:#FFAB91;
-	font-size: 1.4em;
+	font-size: 1.2em;
 	padding:5px;
 }
 .contact_item{
 	margin: 20px 30px 20px 30px;
-	font-size: 0.8em;
+	font-size: 0.7em;
 }
 .contact_item p{
 	line-height: 1.5em;
@@ -49,7 +51,7 @@ body{
 }
 .text_descript{
 	margin:20px 30px 280px 30px;
-	font-size: 0.8em;
+	font-size: 0.7em;
 	text-align: justify;
 	line-height: 1.5em;
 }
@@ -58,7 +60,7 @@ body{
 	justify-content: center;
 }
 .fas{
-	font-size: 2em;
+	font-size: 1.8em;
 	color:#455A64;
 	margin:20px;
 }
@@ -67,10 +69,10 @@ body{
 	width:560px;
 }
 .ensemble_droit h1{
-	font-size: 2.5em;
+	font-size: 2.2em;
 }
 .ensemble_contenu_droit{
-	margin: 40px 20px 0px 40px;
+	margin: 40px 30px 0px 40px;
 }
 .ensemble_title{
 	margin: 75px 0px 75px 0px;
@@ -78,7 +80,7 @@ body{
 	line-height: 2.2em;
 }
 .ensemble_title h2{
-	font-size: 1.2em;
+	font-size: 1em;
 }
 .dividertitle{
 	width:11%;
@@ -131,7 +133,7 @@ body{
 }
 .recom_text{
 	font-size: 0.6em;
-	line-height: 2em;
+	line-height: 1.5em;
 }
 .recom_text:first-child{
 	margin-right: 150px;
@@ -142,32 +144,24 @@ body{
 .ensemble_contenu_deux{
 	display: none;
 }
+h3{
+	font-size: 1.1em;
+}
 
-@media screen and (max-width: 1000px){
-*{
-	margin:0;
-	padding:0;
-	box-sizing: border-box;
-	list-style: none;
-	font-family: 'Montserrat', sans-serif;
-}
-body{
-	background: #585C68;
-	font-size: 14px;
-	line-height: 22px;
-	color: #555555;
-}
+@media screen and (max-width: 1024px){
 .ensemble{
 	width: 100%;
 	height: auto;
 	display: block;
 	margin-top: 0px;
+	margin-bottom: 0px;
 }
 .ensemble_contenu{
 	display: none;
 }
 .ensemble_contenu_deux{
-	display: inline-block;
+	display: block;
+	background-color: #FFAB91;
 }
 .ensemble .ensemble_gauche{
 	width:100%;
@@ -182,24 +176,23 @@ body{
 .contact_item{
 	font-size: 0.8em;
 	text-align: center;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
 }
 .contact_item p{
-	margin:10px 0px 10px 0px;
+	margin:10px 20px 10px 20px;
 }
 .text_descript{
 	margin:20px 30px 20px 30px;
 	font-size: 0.8em;
-	text-align: center;
+	text-align: justify;
 }
 .ensemble_fa{
 	display:flex;
 	justify-content: center;
 }
-.fas{
-	font-size: 2em;
-	color:#455A64;
-	margin:20px;
-}
+
 .ensemble_droit{
 	background-color: white;
 	width:100%;
@@ -219,48 +212,13 @@ body{
 .ensemble_title h2{
 	font-size: 1.2em;
 }
-.dividertitle{
-	width:11%;
-	height:1px;
-	background-color: #FFAB91;
-}
-.divider{
-	width:100%;
-	height:1px;
-	background-color: #FFAB91;
-}
 .row{
 	display: flex;
 	margin-top: 25px;
 
 }
-.row_date{
-	display: inline-flex;
-	margin-right: 80px;
-	font-size: 0.8em;
-	align-items: baseline;
-}
 .row_descript p{
-	font-size: 0.7em;
-}
-.fa-dot-circle{
-	margin-right: 5px;
-	color:#FFAB91;
-}
-.fa-medal{
-	font-size: 1em;
-	margin:0px 10px 5px 0px;
-	color:#FFAB91;
-}
-.fa-address-book{
-	font-size: 1em;
-	margin:0px 10px 5px 0px;
-	color:#FFAB91;
-}
-.fa-briefcase{
-	font-size: 1em;
-	margin:0px 10px 5px 0px;
-	color:#FFAB91;
+	font-size: 0.8em;
 }
 .marge{
 	margin-top: 30px;
@@ -271,19 +229,43 @@ body{
 	padding-bottom: 40px;
 	justify-content: space-around;
 }
-.recom_text{
-	font-size: 0.6em;
-	line-height: 2em;
-}
 
-.brian{
-	color:#FFAB91;
 }
-
-h3{
-	font-size: 1em;
-}
-p{
-	font-size: 1em;
-}
+@media (max-width: 640px){
+	*{
+		box-sizing: border-box;
+	}
+	body {
+		width: auto;
+		margin: 0;
+		padding: 0;
+	}
+	.row{
+		display: block;
+		text-align: center;
+		line-height: 1.7em;
+		margin:55px 0px 55px 0px;
+	}
+	h3{
+		text-align: center;
+	}
+	.ensemble_title{
+		text-align: center;
+	}
+	.row_date{
+		text-align: center;
+		margin:0px;
+	}
+	.row_date br{
+		display: none;
+	}
+	.contact_item{
+		display: block;
+	}
+	.recom_text:first-child{
+		margin-right: 50px;
+	}
+	.ensemble_item{
+		font-size: 1em;
+	}
 }
